기본기능 테스트